docs: 更新 README.md 和 tsconfig.json 文件
- 更新 README.md 文件以反映项目的最新状态
- 调整 tsconfig.json 配置以优化 TypeScript 编译设置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,11 @@
         "outDir": "out",
         "rootDir": "src",
         "sourceMap": true,
-        "strict": true
+        "strict": true,
+        "lib": [
+            "es2018",
+            "dom"
+        ],
     },
     "include": [
         "src/**/*.ts"
