chore: update package.json
- Updated dependencies and scripts in package.json

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
             {
                 "command": "agcm.generateCommitMessage",
                 "title": "生成智能提交信息/Generate Smart Commit Message",
-                "icon": "${sparkle}"
+                "icon": "./src/images/logo.png"
             }
         ],
         "menus": {
