chore: 更新 package.json 文件
- 更新依赖项版本
- 添加新的开发依赖
- 移除不再使用的依赖

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "AGCM",
     "description": "智能Git提交信息生成器/Intelligent Git Commit Message Generator",
     "version": "1.0.3",
-    "publisher": "Leon4055",
+    "publisher": "code-leon4055",
     "repository": {
         "type": "git",
         "url": "https://github.com/flying4055/agcm.git"
